# rust_turing_machine

./: Cargo.toml
rulesets/: 0n1n_enumerator_efficient.txt  0n1n_enumerator_small.txt  comments_test_file.txt
rulesets/test/: test_print_state_entered_only_once.txt  test_print_state_never_entered.txt
src/: main.rs
src/enumerator/: bientry.rs  entry.rs  mod.rs  parse.rs  rules.rs  without_comments.rs
src/turing_machine/: mod.rs  parse.rs  rules.rs
