[package]
name = "turing_machine"
version = "0.1.0"
authors = ["gorilskij <43991400@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
no-comment = "0.0.1"
getset = "0.1.0"
bimap = "0.4.0"
itertools = "0.9.0"